--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,6 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "17a8c85a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here is the list of deliverables for the analysis of the school district: \n",
+    "\n",
+    "# A high-level snapshot of the district's key metrics, presented in a table format\n",
+    "# An overview of the key metrics for each school, presented in a table format\n",
+    "# Tables presenting each of the following metrics:\n",
+    "# Top 5 and bottom 5 performing schools, based on the overall passing rate\n",
+    "# The average math score received by students in each grade level at each school\n",
+    "# The average reading score received by students in each grade level at each school\n",
+    "# School performance based on the budget per student\n",
+    "# School performance based on the school size \n",
+    "# School performance based on the type of school"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "fc9e2c65",
    "metadata": {},
    "outputs": [],
@@ -13,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dd49eb18",
    "metadata": {},
    "outputs": [],
@@ -25,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fc58527c",
+   "execution_count": 6,
+   "id": "d4951b49",
    "metadata": {},
    "outputs": [
     {
@@ -98,110 +118,20 @@
        "      <td>1468</td>\n",
        "      <td>917500</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Wilson High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>2283</td>\n",
-       "      <td>1319574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Cabrera High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1858</td>\n",
-       "      <td>1081356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Bailey High School</td>\n",
-       "      <td>District</td>\n",
-       "      <td>4976</td>\n",
-       "      <td>3124928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Holden High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>427</td>\n",
-       "      <td>248087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Pena High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>962</td>\n",
-       "      <td>585858</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Wright High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>1049400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Rodriguez High School</td>\n",
-       "      <td>District</td>\n",
-       "      <td>3999</td>\n",
-       "      <td>2547363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Johnson High School</td>\n",
-       "      <td>District</td>\n",
-       "      <td>4761</td>\n",
-       "      <td>3094650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Ford High School</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2739</td>\n",
-       "      <td>1763916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    School ID            school_name      type  size   budget\n",
-       "0           0      Huang High School  District  2917  1910635\n",
-       "1           1   Figueroa High School  District  2949  1884411\n",
-       "2           2    Shelton High School   Charter  1761  1056600\n",
-       "3           3  Hernandez High School  District  4635  3022020\n",
-       "4           4    Griffin High School   Charter  1468   917500\n",
-       "5           5     Wilson High School   Charter  2283  1319574\n",
-       "6           6    Cabrera High School   Charter  1858  1081356\n",
-       "7           7     Bailey High School  District  4976  3124928\n",
-       "8           8     Holden High School   Charter   427   248087\n",
-       "9           9       Pena High School   Charter   962   585858\n",
-       "10         10     Wright High School   Charter  1800  1049400\n",
-       "11         11  Rodriguez High School  District  3999  2547363\n",
-       "12         12    Johnson High School  District  4761  3094650\n",
-       "13         13       Ford High School  District  2739  1763916\n",
-       "14         14     Thomas High School   Charter  1635  1043130"
+       "   School ID            school_name      type  size   budget\n",
+       "0          0      Huang High School  District  2917  1910635\n",
+       "1          1   Figueroa High School  District  2949  1884411\n",
+       "2          2    Shelton High School   Charter  1761  1056600\n",
+       "3          3  Hernandez High School  District  4635  3022020\n",
+       "4          4    Griffin High School   Charter  1468   917500"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +139,13 @@
    "source": [
     "# Read the school data file and store it in a Pandas DataFrame.\n",
     "school_data_df = pd.read_csv(school_data_to_load)\n",
-    "school_data_df"
+    "school_data_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0afcbfde",
+   "execution_count": 5,
+   "id": "44f2f2d0",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +249,7 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4951b49",
+   "id": "f6e0f267",
    "metadata": {},
    "outputs": [],
    "source": []
