--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1961,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "baa3beca",
+   "id": "a4d8f7d4",
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d0bce556",
+   "id": "08afd884",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "ab1e968d",
+   "id": "5e761b86",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3a6a23ed",
+   "id": "3dc3f40c",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "27ef2dd7",
+   "id": "83a69662",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "04da674b",
+   "id": "99346382",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "8173128f",
+   "id": "faf52f87",
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2469,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "f3dfd65c",
+   "id": "f9d4881e",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "11915a82",
+   "id": "a9ce1464",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a885d1ed",
+   "id": "59da0c36",
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "80502840",
+   "id": "c2504c72",
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "17bf9451",
+   "id": "2a3fbe07",
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "cd8d0863",
+   "id": "c283187b",
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2925,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "844ed21a",
+   "id": "4736f987",
    "metadata": {},
    "outputs": [
     {
@@ -2969,7 +2969,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "76da4fb8",
+   "id": "6f0d249e",
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3229,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "1d10187d",
+   "id": "d41aa700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3252,7 +3252,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "64cea72c",
+   "id": "21028c60",
    "metadata": {},
    "outputs": [
     {
@@ -3298,7 +3298,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "da401a1a",
+   "id": "a3d90af1",
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3334,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "72089ea2",
+   "id": "46a0d61b",
    "metadata": {},
    "outputs": [
     {
@@ -3477,7 +3477,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "de397c87",
+   "id": "317f5a92",
    "metadata": {},
    "outputs": [
     {
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "7ece5b55",
+   "id": "e11c0c5b",
    "metadata": {},
    "outputs": [
     {
@@ -3691,7 +3691,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "c7570aa3",
+   "id": "b517b8d5",
    "metadata": {},
    "outputs": [
     {
@@ -3849,8 +3849,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc732ce2",
+   "execution_count": 120,
+   "id": "111eedf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3858,7 +3858,174 @@
     "#Columns were in correct order\n",
     "#If switch were needed use:\n",
     "#new_column_order = [\"column2\", \"column4\", \"column1\"]\n",
-    "#Followed by\n"
+    "#Followed by\n",
+    "#df = df[new_column_order]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "51cb6e61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4.9.1 Find the Highest Performing Schools\n",
+    "# To display the top five highest-performing schools, \n",
+    "# We can sort the per_school_summary_df DataFrame on the % Overall Passing column.\n",
+    "\n",
+    "# sort_values function sorts a Dataframe or Series passed through the parenthesis\n",
+    "# parameters are addable: Ex: ascending=True...if a parameter isnt added, ascending=True is default\n",
+    "\n",
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a909890",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4.9.2 Find the Lowest Performing Schools\n",
+    "# Same as highest, but ascending\n",
+    "\n"
    ]
   }
  ],
