--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1961,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8ee36e32",
+   "id": "0c861c18",
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "757ae4a0",
+   "id": "1bfdd0c5",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "9f35292b",
+   "id": "0301504f",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "1ad6359f",
+   "id": "35354b05",
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "8df3a309",
+   "id": "c73f8fc5",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "c9ab562e",
+   "id": "9824c6e6",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "651ff61e",
+   "id": "7dc7fe61",
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2469,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "9bdf0836",
+   "id": "51366256",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "30f15fb3",
+   "id": "5efad80b",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ea698ad1",
+   "id": "ad047d17",
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2600,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "21cb03f8",
+   "id": "3e45963f",
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a6b81094",
+   "id": "c33273c0",
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c2ee7e5e",
+   "id": "7219f8f6",
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2925,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "5c4f7d3b",
+   "id": "ef984451",
    "metadata": {},
    "outputs": [
     {
@@ -2969,7 +2969,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "a89d6c98",
+   "id": "d87d0abc",
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3229,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "9998306a",
+   "id": "4d4a1fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3252,7 +3252,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2efc5c81",
+   "id": "96b05ce1",
    "metadata": {},
    "outputs": [
     {
@@ -3298,7 +3298,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "8ec54f9c",
+   "id": "7dc7f199",
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3334,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "eaa1a9d5",
+   "id": "ba47308b",
    "metadata": {},
    "outputs": [
     {
@@ -3477,7 +3477,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "b33e1dee",
+   "id": "cf5f39bc",
    "metadata": {},
    "outputs": [
     {
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "35091b33",
+   "id": "5fc4ac80",
    "metadata": {},
    "outputs": [
     {
@@ -3691,7 +3691,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "9de6f8c3",
+   "id": "d303d664",
    "metadata": {},
    "outputs": [
     {
@@ -3850,7 +3850,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "4599912c",
+   "id": "64cb29e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3867,7 +3867,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "3342a698",
+   "id": "61c4cc40",
    "metadata": {},
    "outputs": [
     {
@@ -4019,7 +4019,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "53cb2eef",
+   "id": "dd1c01c3",
    "metadata": {},
    "outputs": [
     {
@@ -4168,7 +4168,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "38752af6",
+   "id": "74407f1b",
    "metadata": {},
    "outputs": [
     {
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "b8d76c5c",
+   "id": "b5f0505e",
    "metadata": {},
    "outputs": [
     {
@@ -4475,7 +4475,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "6fb0ce61",
+   "id": "6e2ad052",
    "metadata": {},
    "outputs": [
     {
@@ -4520,7 +4520,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "e989cf2c",
+   "id": "7117a893",
    "metadata": {},
    "outputs": [
     {
@@ -4628,7 +4628,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "85bcd171",
+   "id": "dc0ac18b",
    "metadata": {},
    "outputs": [
     {
@@ -4734,7 +4734,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "87adf352",
+   "id": "2b0a79ed",
    "metadata": {},
    "outputs": [
     {
@@ -4848,7 +4848,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "90db65d0",
+   "id": "89e57e73",
    "metadata": {},
    "outputs": [
     {
@@ -4956,7 +4956,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a417eb7d",
+   "id": "8ed5f7ce",
    "metadata": {},
    "outputs": [
     {
@@ -5008,7 +5008,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "75b002cf",
+   "id": "c133ff3c",
    "metadata": {},
    "outputs": [
     {
@@ -5054,7 +5054,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "50ca80c4",
+   "id": "37f46182",
    "metadata": {},
    "outputs": [
     {
@@ -5084,7 +5084,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "1ff91624",
+   "id": "53646855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5100,7 +5100,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "f9fec7b4",
+   "id": "dacf3da5",
    "metadata": {},
    "outputs": [
     {
@@ -5443,11 +5443,186 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 141,
+   "id": "f5977870",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Spending Ranges (Per Student)\n",
+       "<$584       90.369459\n",
+       "$585-629    81.418596\n",
+       "$630-644    62.857656\n",
+       "$645-675    53.526855\n",
+       "Name: % Overall Passing, dtype: float64"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4.11.3 Group by the Spending Ranges\n",
+    "# Create a series for:\n",
+    "#Average Math Score\n",
+    "#Average Reading Score\n",
+    "#Average % Passing Math\n",
+    "#Average % Passing Reading\n",
+    "#Average % Overall Passing\n",
+    "# To create a Series that has a column as the index, use the groupby() function on the DataFrame and add the column inside the parentheses.\n",
+    "# column = \"Spending Ranges (Per Student)\", and use mean() to get averages\n",
+    "\n",
+    "# Calculate averages for the desired columns.\n",
+    "spending_math_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "spending_reading_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "spending_passing_math = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "spending_passing_reading = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "overall_passing_spending = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Overall Passing\"]\n",
+    "overall_passing_spending\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "89bb8ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;$584</th>\n",
+       "      <td>83.455399</td>\n",
+       "      <td>83.933814</td>\n",
+       "      <td>93.460096</td>\n",
+       "      <td>96.610877</td>\n",
+       "      <td>90.369459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$585-629</th>\n",
+       "      <td>81.899826</td>\n",
+       "      <td>83.155286</td>\n",
+       "      <td>87.133538</td>\n",
+       "      <td>92.718205</td>\n",
+       "      <td>81.418596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$630-644</th>\n",
+       "      <td>78.518855</td>\n",
+       "      <td>81.624473</td>\n",
+       "      <td>73.484209</td>\n",
+       "      <td>84.391793</td>\n",
+       "      <td>62.857656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$645-675</th>\n",
+       "      <td>76.997210</td>\n",
+       "      <td>81.027843</td>\n",
+       "      <td>66.164813</td>\n",
+       "      <td>81.133951</td>\n",
+       "      <td>53.526855</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Average Math Score  Average Reading Score  \\\n",
+       "Spending Ranges (Per Student)                                              \n",
+       "<$584                                   83.455399              83.933814   \n",
+       "$585-629                                81.899826              83.155286   \n",
+       "$630-644                                78.518855              81.624473   \n",
+       "$645-675                                76.997210              81.027843   \n",
+       "\n",
+       "                               % Passing Math  % Passing Reading  \\\n",
+       "Spending Ranges (Per Student)                                      \n",
+       "<$584                               93.460096          96.610877   \n",
+       "$585-629                            87.133538          92.718205   \n",
+       "$630-644                            73.484209          84.391793   \n",
+       "$645-675                            66.164813          81.133951   \n",
+       "\n",
+       "                               % Overall Passing  \n",
+       "Spending Ranges (Per Student)                     \n",
+       "<$584                                  90.369459  \n",
+       "$585-629                               81.418596  \n",
+       "$630-644                               62.857656  \n",
+       "$645-675                               53.526855  "
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4.11.4  Create a DataFrame for the Scores by School Spending\n",
+    "# To add a list or Series to a DataFrame, use:\n",
+    "# df = pd.DataFrame({\"column name\": column values})\n",
+    "\n",
+    "# Assemble into DataFrame.\n",
+    "spending_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : spending_math_scores,\n",
+    "          \"Average Reading Score\": spending_reading_scores,\n",
+    "          \"% Passing Math\": spending_passing_math,\n",
+    "          \"% Passing Reading\": spending_passing_reading,\n",
+    "          \"% Overall Passing\": overall_passing_spending})\n",
+    "\n",
+    "spending_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d1df575e",
+   "id": "bb781d5f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Format the DataFrame\n",
+    "#Format the average math and reading scores to one decimal place\n",
+    "#Format the percent passing math and reading to the nearest whole number\n",
+    "#Format the overall passing percentage to the nearest whole number\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
